# JourneyOfTheWindows

./: .gitignore  CMakeLists.txt  README.md  TheJorneyOfWindows.sln  TheJorneyOfWindows.vcxproj  TheJourneyOfWindows.sln  TheJourneyOfWindows.vcxproj  TheJourneyOfWindows.vcxproj.filters  main.c
HeaderFiles/: testHeader.h
Src/: TestFile.c
assets/entities/CupimDigital/static/: Cupim digital.aseprite
assets/entities/HeadHots/static/: Head Hots.aseprite
src/: main.c
src/action/: funcion_action_service.h  function_action_service.c
src/configuration/: game_configure.c  game_configure.h
src/display/action_block/: action_blocks_service.c  action_blocks_service.h
src/display/blocks/: blocks_service.c  blocks_service.h
src/display/entity/: entity_service.c  entity_service.h
src/display/game/: game_service.c  game_service.h
src/display/map/: map_service.c  map_service.h
src/display/position/: position_service.c  position_service.h
src/display/stage/: stage_service.c  stage_service.h
src/gameplay/: gameplayService.c
src/lab/display/: mapService.c  mapService.h
src/lab/display/entity/: entityService.c  entityService.h
src/lab/display/map/: mapService.c  mapService.h
src/lab/display/position/: positionService.c  positionService.h
src/lab/display/stage/: stageService.c  stageService.h
src/lab/display/structs/: Actor.h  Entity.h  Map.h  Object.h
src/lab/gameplay/: gameplayService.h
src/utils/: array_utils.c  array_utils.h
